--- a/src/main/resources/templates/Procedure/newProcedure.html
+++ b/src/main/resources/templates/Procedure/newProcedure.html
@@ -39,38 +39,38 @@
                     </ul>
                 </li>
             </ul>
-<!--            <ul class="nav navbar-nav navbar-right">-->
-<!--                <li>-->
-<!--                    <a th:href="@{/companies/company/{id}(id=${company.getCompanyId()})}"><i-->
-<!--                            class="glyphicon glyphicon-arrow-left"></i></a>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="/companies/new"><i-->
-<!--                            class="glyphicon glyphicon-plus"></i></a>-->
-<!--                </li>-->
-<!--                <li>-->
-<!--                    <a href="#"><i class="glyphicon glyphicon-trash" data-toggle="modal"-->
-<!--                                   data-target="#myModalDelete"></i>-->
-<!--                    </a>-->
-<!--                    <div id="myModalDelete" class="modal fade" tabindex="-1">-->
-<!--                        <div class="modal-dialog modal-sm">-->
-<!--                            <div class="modal-content">-->
-<!--                                <div class="modal-header">-->
-<!--                                    <button class="close" data-dismiss="modal">х</button>-->
-<!--                                    <h4 class="modal-title">Удаление компании</h4>-->
-<!--                                </div>-->
-<!--                                <div class="modal-body">Вы уверены, что хотите удалить компанию?</div>-->
-<!--                                <form th:method="DELETE"-->
-<!--                                      th:action="@{/companies/company/{id} (id = ${company.getCompanyId()})}">-->
-<!--                                    <div class="modal-footer">-->
-<!--                                        <button class="btn btn-success" data-dismiss="modal">Отмена</button>-->
-<!--                                        <button class="btn btn-danger" type="submit">Удалить</button>-->
-<!--                                    </div>-->
-<!--                                </form>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </li>-->
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a th:href="@{/companies/company/{id}(id=${company.getCompanyId()})}"><i
+                            class="glyphicon glyphicon-arrow-left"></i></a>
+                </li>
+                <li>
+                    <a href="/companies/new"><i
+                            class="glyphicon glyphicon-plus"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="glyphicon glyphicon-trash" data-toggle="modal"
+                                   data-target="#myModalDelete"></i>
+                    </a>
+                    <div id="myModalDelete" class="modal fade" tabindex="-1">
+                        <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button class="close" data-dismiss="modal">х</button>
+                                    <h4 class="modal-title">Удаление компании</h4>
+                                </div>
+                                <div class="modal-body">Вы уверены, что хотите удалить компанию?</div>
+                                <form th:method="DELETE"
+                                      th:action="@{/companies/company/{id} (id = ${company.getCompanyId()})}">
+                                    <div class="modal-footer">
+                                        <button class="btn btn-success" data-dismiss="modal">Отмена</button>
+                                        <button class="btn btn-danger" type="submit">Удалить</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </li>
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
