--- a/src/main/resources/templates/Record/editRecord.html
+++ b/src/main/resources/templates/Record/editRecord.html
@@ -36,6 +36,8 @@
                         <li><a th:href="@{/companies}">Все компании</a></li>
                         <li class="divider"></li>
                         <li><a th:href="@{/users}">Все пользователи</a></li>
+                        <li class="divider"></li>
+                        <li><a th:href="@{/procedures/user/{userId} (userId = ${line.userId})}">Все процедуры пользователя</a></li>
                     </ul>
                 </li>
             </ul>
