--- a/src/main/resources/templates/User/singleUser.html
+++ b/src/main/resources/templates/User/singleUser.html
@@ -60,6 +60,10 @@
                     <a th:href="@{/records/user/{id} (id = ${user.getUserId()})}"><i
                             class="	glyphicon glyphicon-th-list"></i></a>
                 </li>
+                <li>
+                    <a th:href="@{/procedures/user/{userId} (userId = ${user.userId})}"><i
+                            class="glyphicon glyphicon-edit"></i></a>
+                </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                     <ul class="dropdown-menu">
