fix bug in small screens allRecords view

--- a/src/main/resources/templates/Record/allRecords.html
+++ b/src/main/resources/templates/Record/allRecords.html
@@ -103,21 +103,21 @@
             </div>
         </tr>
         <tr>
-            <th class="col-md-1" style="border: 1px solid grey; background-color: #dff0d8">
+            <th class="col-md-1 col-sm-1" style="border: 1px solid grey; background-color: #dff0d8">
             </th>
-            <th class="col-md-1" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+            <th class="col-md-1 col-sm-1" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
                 Время
             </th>
-            <th class="col-md-4" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+            <th class="col-md-4 col-sm-4" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
                 Имя клиента
             </th>
-            <th class="col-md-3" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+            <th class="col-md-3 col-sm-3" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
                 Название процедуры
             </th>
-            <th class="col-md-1" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+            <th class="col-md-1 col-sm-1" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
                 Стоимость
             </th>
-            <th class="col-md-2" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+            <th class="col-md-2 col-sm-2" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
                 Комментарий
             </th>
         </tr>
